# osmtools

./: .markdownlint.json  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: check.yml
src/: filter.rs  geojson.rs  geom.rs  locality.rs  main.rs  stats.rs  util.rs
