[package]
name = "osmtools"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.9", features = ["derive"] }
geojson = "0.24.1"
itertools = "0.12.0"
log = "0.4.20"
osmpbfreader = "0.16.0"
regex = "1.10.2"
serde = "1.0.192"
serde_json = "1.0.108"
simple_logger = { version = "4.3.0", features = ["stderr"] }
smartstring = "1.0.1"

[profile.release]
panic = "abort"
strip = true
codegen-units = 1
lto = "thin"

[profile.profiling]
inherits="release"
strip = false
debug = true
