[package]
name = "osmtools"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
geojson = "0.24.1"
itertools = "0.12.0"
log = "0.4.20"
ordered-float = "4.2.0"
osmpbfreader = "0.16.1"
regex = "1.10.2"
serde = "1.0.201"
serde_json = "1.0.109"
simple_logger = { version = "4.3.3", features = ["stderr"] }
smartstring = "1.0.1"

[profile.release]
panic = "abort"
strip = true
codegen-units = 1
lto = "thin"

[profile.profiling]
inherits="release"
strip = false
debug = true
